modules/gdscript/tests/scripts/analyzer/errors/invalid_concatenation.gd
func test():
	print(true + true)
	print({"hello": "world"} + {"godot": "engine"})
	print("hello" + ["world"])
